Drop command line args, drop MODULE_SPECIFIC_ARGS, explain system properties
Vert.x 5 removed CLI support:
https://vertx.io/docs/guides/vertx-5-migration-guide/#_cli_framework_deprecation

FOLIO uses environment variables, therefore we also reduce the command line option support.